--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body class="font-sans">
-    <section class="w-full h-screen flex items-start md:items-center justify-center bg-[url('./images/bg-01.jpg')] bg-cover bg-no-repeat bg-center" >
+    <section class="w-full h-screen flex items-start md:items-center pt-3 justify-center bg-[url('./images/bg-01.jpg')] bg-cover bg-no-repeat bg-center" >
         <div class="login-container bg-white rounded-xl px-10 md:px-20 py-20 w-11/12 md:w-full max-w-xl">
             <h2 class="text-center font-semibold text-slate-900 text-5xl mb-8">Please Login</h2>
             <div>
