--- a/bank.html
+++ b/bank.html
@@ -21,7 +21,7 @@
                     <h2 class=" font-medium text-white text-2xl md:text-4xl mb-4">Withdraw</h2>
                     <h3 class="font-semibold text-white text-2xl md:text-5xl">$<span id="withdraw-amount">00</span></h3>
                 </div>
-                <div class="bg-indigo-700 rounded-xl p-5 px-10 md:p-10 col-span-2 md:col-span-1">
+                <div class="bg-indigo-700 rounded-xl p-5 px-10 md:p-10 col-span-2 md:col-span-1 text-center md:text-left">
                     <h2 class=" font-medium text-white text-2xl md:text-4xl mb-4">Balance</h2>
                     <h3 class="font-semibold text-white text-2xl md:text-5xl">$<span id="total-amount">1240</span></h3>
                 </div>
