--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
             <h2 class="text-center font-semibold text-slate-900 text-5xl mb-8">Please Login</h2>
             <div>
                 <label class="block text-stone-500 text-base mb-2" for="user-email">Email address</label>
-                <input class="w-full p-2 mb-5 outline-none text-slate-900 text-base border-b-2 border-stone-300 focus:border-stone-700" type="email" name="user-email" id="user-email" placeholder="Enter your email" required>
+                <input class="w-full p-2 mb-5 outline-none text-slate-900 text-base border-b-2 border-stone-300 focus:border-stone-700" type="email" name="user-email" id="user-email" placeholder="Enter your email" value="dev.aminur@gmail.com" required>
                 <label class="block text-stone-500 text-base mb-2" for="user-password">Password</label>
-                <input class="w-full p-2 mb-2 outline-none text-slate-900 text-base border-b-2 border-stone-300 focus:border-stone-700" type="password" name="user-password" id="user-password" placeholder="Enter your password" required>
+                <input class="w-full p-2 mb-2 outline-none text-slate-900 text-base border-b-2 border-stone-300 focus:border-stone-700" type="password" name="user-password" id="user-password" placeholder="Enter your password" value="secret" required>
                 <p class="text-right mb-6"><a href="#" class=" text-stone-500 hover:text-[#F507FE] text-base mb-2">Forgot password?</a></p>
                 <button id="login-btn" class="w-full mb-10 bg-gradient-to-r from-[#06D7DF]  to-[#F507FE] rounded-full p-3 text-white uppercase font-medium duration-300"><span class="w-full bg-red-900"></span>Login</button>
             </div>
             <div>
                 <p class=" text-stone-500 text-base text-center mb-5">Or</p>
                 <ul class="social list-none">
-                    <li ><a href="" class="block w-full p-2 border-2 border-stone-400 text-base mb-5"><img class="w-8 inline mr-4" src="./images/google.svg" alt="">Continue with Google</a></li>
-                    <li ><a href="" class="block w-full p-2 border-2 border-stone-400 text-base mb-5"><img class="w-6 inline mr-4" src="./images/github.svg" alt="">Continue with Github</a></li>
+                    <li ><a href="/baper-bank/bank" class="block w-full p-2 border-2 border-stone-400 text-base mb-5"><img class="w-8 inline mr-4" src="./images/google.svg" alt="">Continue with Google</a></li>
+                    <li ><a href="/baper-bank/bank" class="block w-full p-2 border-2 border-stone-400 text-base mb-5"><img class="w-6 inline mr-4" src="./images/github.svg" alt="">Continue with Github</a></li>
                 </ul>
             </div>
 
