--- a/bank.html
+++ b/bank.html
@@ -3,43 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baap er Bank</title>
+    <title>Functional Baap-er-Bank</title>
     <script src="https://cdn.tailwindcss.com"></script>
-
 </head>
-<body class="font-sans">
-    <section class="w-full pt-12 h-screen flex items-center justify-start flex-col gap-6 bg-[url('./images/bg-01.jpg')] bg-cover bg-no-repeat bg-center" >
-        <h1 class="text-center font-medium text-slate-900 text-2xl md:text-3xl">Welcome to <span class="text-red-700">Baap er Bank</span>!!!</h1>
-        <div class="w-full max-w-5xl ">
-            <h2 class="text-center font-semibold text-black text-4xl md:text-5xl mb-10">Get some moooney!!</h2>
-            <div class="grid grid-cols-2 md:grid-cols-3 gap-4 mb-10 p-5">
-                <div class="bg-green-600 rounded-xl p-5 md:p-10">
-                    <h2 class=" font-medium text-white text-2xl md:text-4xl mb-4">Deposit</h2>
-                    <h3 class="font-semibold text-white text-2xl md:text-5xl">$<span id="deposit-amount">00</span></h3>
-                </div>
-                <div class="bg-orange-400 rounded-xl p-5 md:p-10">
-                    <h2 class=" font-medium text-white text-2xl md:text-4xl mb-4">Withdraw</h2>
-                    <h3 class="font-semibold text-white text-2xl md:text-5xl">$<span id="withdraw-amount">00</span></h3>
-                </div>
-                <div class="bg-indigo-700 rounded-xl p-5 px-10 md:p-10 col-span-2 md:col-span-1 text-center md:text-left">
-                    <h2 class=" font-medium text-white text-2xl md:text-4xl mb-4">Balance</h2>
-                    <h3 class="font-semibold text-white text-2xl md:text-5xl">$<span id="total-amount">1240</span></h3>
-                </div>
+<body>
+    <section>
+        <h1 class="text-center text-5xl font-medium text-stone-800 my-10">Functional <span class="text-orange-700">Baap-er-Bank</span>!!!</h1>
+        <div class="grid grid-cols-3 gap-5 mx-auto w-9/12 mb-10">
+            <div class="bg-yellow-500 p-10 rounded-xl">
+                <h3 class="text-2xl font-medium text-white mb-5">Deposit</h3>
+                <h2 class="text-3xl font-medium text-white ">$<span id="deposit-total">00</span></h2>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-5 p-4">
-                <div class="bg-indigo-500 rounded-xl p-5 px-10 md:p-12">
-                    <h2 class=" font-medium text-white text-2xl md:text-4xl mb-4">Please Deposit</h2>
-                    <input class="w-full p-2 mb-5 outline-none text-slate-900 text-base border-b-2 border-stone-300 focus:border-stone-700 rounded-md" type="text" name="deposit" id="deposit-box" placeholder="Enter your deposit amount" required>
-                    <button id="deposit-btn" class="bg-[#F507FE] rounded-lg py-3 px-10 text-white uppercase font-medium duration-300"></span>Deposit</button>
-                </div>
-                <div class="bg-sky-700 rounded-xl p-5 px-10 md:p-12 ">
-                    <h2 class=" font-medium text-white text-2xl md:text-4xl mb-4">Please Withdraw</h2>
-                    <input class="w-full p-2 mb-5 outline-none text-slate-900 text-base border-b-2 border-stone-300 focus:border-stone-700 rounded-md" type="text" name="deposit" id="withdraw-box" placeholder="Enter your withdraw amount" required>
-                    <button id="withdraw-btn" class="bg-[#F507FE] rounded-lg py-3 px-10 text-white uppercase font-medium duration-300"></span>Withdraw</button>
-                </div>
+            <div class="bg-orange-500 p-10 rounded-xl">
+                <h3 class="text-2xl font-medium text-white mb-5">Withdraw</h3>
+                <h2 class="text-3xl font-medium text-white ">$<span id="withdraw-total">00</span></h2>
+            </div>
+            <div class="bg-teal-500 p-10 rounded-xl">
+                <h3 class="text-2xl font-medium text-white mb-5">Balance</h3>
+                <h2 class="text-3xl font-medium text-white ">$<span id="total-amount">1520</span></h2>
+            </div>
+        </div>
+        <div class="grid grid-cols-2 gap-5 mx-auto w-9/12">
+            <div class="bg-sky-500 p-10 rounded-xl">
+                <h2 class=" font-medium text-white text-2xl md:text-4xl mb-4">Please Deposit</h2>
+                <input class="w-full p-2 mb-5 outline-none text-slate-900 text-base border-b-2 border-stone-300 focus:border-stone-700 rounded-md" type="text" name="deposit" id="deposit-box" placeholder="Enter your deposit amount" required>
+                <button id="deposit-btn" class="bg-blue-800 hover:bg-blue-600 rounded-lg py-3 px-10 text-white uppercase font-medium duration-300"></span>Deposit</button>
+            </div>
+            <div class="bg-emerald-600 p-10 rounded-xl">
+                <h2 class=" font-medium text-white text-2xl md:text-4xl mb-4">Please Withdraw</h2>
+                <input class="w-full p-2 mb-5 outline-none text-slate-900 text-base border-b-2 border-stone-300 focus:border-stone-700 rounded-md" type="text" name="deposit" id="withdraw-box" placeholder="Enter your withdraw amount" required>
+                <button id="withdraw-btn" class="bg-blue-800 hover:bg-blue-600 rounded-lg py-3 px-10 text-white uppercase font-medium duration-300"></span>Withdraw</button>
             </div>
         </div>
     </section>
+
+    <script src="./js/utility.js"></script>
     <script src="./js/deposit.js"></script>
     <script src="./js/withdraw.js"></script>
 </body>
